# bilibili-downloader-gui

./: .env.example  .forest.toml  .gitignore  .prettierignore  .prettierrc.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LOGGING_GAPS.md  README-JP.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/node-setup/: action.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: ci.yml  docs.yml  e2e.yml  release.yml
docs/: .prettierignore  astro.config.mjs  components.json  package-lock.json  package.json  tailwind.config.mjs
docs/src/content/: config.ts
docs/src/hooks/: use-controlled-state.tsx
docs/src/i18n/: ui.ts
docs/src/layouts/: BaseLayout.astro
docs/src/lib/: get-strict-context.tsx  utils.ts
docs/src/pages/: faq.astro  index.astro
docs/src/styles/: global.css
e2e-tests/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e-tests/helpers/: app.helpers.ts  selectors.ts
e2e-tests/test/: app-launch.e2e.ts
remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion/src/: ReadmePromoGif.tsx  index.tsx
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  emits.rs  lib.rs  main.rs  paths.rs  window.rs
src-tauri/src/handlers/: audio.rs  bilibili.rs  cleanup.rs  concat.rs  concurrency.rs  cookie.rs  favorites.rs  ffmpeg.rs  github.rs  init.rs  mod.rs  qr_login.rs  resolution.rs  rotation.rs  settings.rs  trim.rs  updater.rs
src-tauri/src/models/: bilibili_api.rs  cookie.rs  frontend_dto.rs  history.rs  mod.rs  qr_login.rs  settings.rs
src-tauri/src/store/: history_store.rs  mod.rs
src-tauri/src/utils/: analytics.rs  cdn_selector.rs  codec.rs  downloads.rs  error_handler.rs  ffmpeg_probe.rs  ffmpeg_progress.rs  log_cleanup.rs  log_mask.rs  mod.rs  paths.rs  sanitize.rs  secure_storage.rs  subtitle.rs  wbi.rs
src/__tests__/: vitest.test.ts
src/__tests__/integration/: history.integration.test.ts
src/__tests__/unit/: downloadStatusSelectors.test.ts  progressSlice.test.ts
src/app/: hooks.ts  store.ts
src/app/contexts/: ListenerContext.tsx
src/hooks/: use-is-in-view.tsx
src/i18n/: index.ts
src/lib/: utils.ts
src/pages/: error.tsx  home.tsx  index.tsx  init.tsx
src/shared/: i18n.ts
src/styles/: global.css  index.css
src/test/: setup.ts
(+351 files in other folders)
