[package]
name = "bilibili-downloader-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bilibili_downloader_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
reqwest = { version = "0.12.24", features = ["json", "stream", "blocking"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
octocrab = "0.42"
semver = "0.11"
xz2 = "0.1.7"
tar = "0.4.44"
zip = "2.2.3"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-process = "2"
futures = "0.3.31"
once_cell = "1.18.0"
base64 = "0.22.1"
libc = "0.2"
rand = "0.8"
chrono = "0.4"
sha2 = "0.10"
hmac = "0.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"

